Revision history for Perl extension Coro.

TODO: should explore PerlIO::coroaio (perl leaks like hell).
TODO: maybe implement a default message channel, very much like Erlang's
      actor model (which is cool in a lot of important aspects (failures!),
      but very lacking in others (higher level ipc)).

5.0
	- NEW ARCHITECTURE: use 4.912 for the stable version.
        - bump API version to 7 - all dependents must be recompiled.
        - Coro::Semaphore->adjust didn't correctly wake up enough waiters.
        - async_pool did free a scalar value twice
          ("Attempt to unreference...").
        - perl's process emulation is now not even theoretically supported
          anymore.
        - directly patch the entersub opcode calling SLF functions (cede,
          transfer and so on). this does speed up context switching, but
          more importanly, it frees us from the hardcoded behaviour of
          entersub, so we might actually be able to return something from
          those functions and atcually create new ones.
        - take advantage of __builtin_frame_address on gcc.
        - expose THX in coroapi (not sure whether this was a wise decision,
          as "threaded" perls are running at half speed anyways).
        - implement execute_slf (schedule-like-function) interface that makes
          it possible to implement schedule-like-functions in XS.
        - use new SLF interface to massively speed up Coro::EV by roughly a factor
          of two.
        - removed timed_down and timed_guard functions - they were not being used
          anyways and should be replaced by a more generic mechanism - and were
          annoying to support anyways :
        - used new SLF interface to massively speed up Coro::Semaphore by a factor
          of three.
        - forgot to include Coro/libcoro/README in the dist for all these years.
        - work around a freebsd pthreads bug (manual testcancel is required as