@@ -5,6 +5,9 @@ TODO: maybe implement a default message channel, very much like Erlang's
       actor model (which is cool in a lot of important aspects (failures!),
       but very lacking in others (higher level ipc)).
 
+TODO: testcancel
+TODO: aio
+TODO: Coro::Semaphore
 5.0
 	- NEW ARCHITECTURE: use 4.912 for the stable version.
         - bump API version to 7 - all dependents must be recompiled.
